[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/weapons/bow/arrow.png" type="Texture" id=1]
[ext_resource path="res://src/actors/armory/ammunition/arrow/Arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.416666, 0.666667 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.5, 1 )

[sub_resource type="Animation" id=5]
resource_name = "Dissapear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Arrow" type="RigidBody2D"]
position = Vector2( 3, 0 )
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1, 0.1 )

[node name="HitDetector" type="Area2D" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 3, 3 )
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector"]
position = Vector2( 3.33333, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.5, 0 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dissapear = SubResource( 5 )
anims/RESET = SubResource( 6 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="HitDetector" to="." method="_on_HitDetector_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
